Fix font, change marquee, fix spacing

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -18,6 +18,7 @@
 
 .tab:hover {
     animation: color-change 2s infinite;
+    cursor: pointer;
 }
 
 .tabsContainer {
