--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -116,6 +116,11 @@
     text-decoration: green wavy underline;
 }
 
+.underlineButtonTextV2:hover {
+  text-decoration: underline black;
+  cursor: pointer;
+}
+
 .projectDesc {
     font-size:calc(8px + 0.8vw);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
